[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "2.1", features = ["http-reqwest"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
time = "0.3"
serde_json = { version = "1", features = ["preserve_order"] }
serde = "1"
futures-util = "0.3"


[[bin]]
name = "query_all_accounts"
path = "./bin/query_all_accounts.rs"

[[bin]]
name = "query_all_accounts_clear"
path = "./bin/query_all_accounts_clear.rs"

[[bin]]
name = "query_all_new_accounts"
path = "./bin/query_all_new_accounts.rs"

[[bin]]
name = "query_pns_info"
path = "./bin/query_pns_info.rs"

[[bin]]
name = "query_records"
path = "./bin/query_records.rs"

[[bin]]
name = "data_analyzer"
path = "./bin/data_analyzer.rs"
